--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                         id="emailInput"
                     />
                     <input type="hidden" name="_subject" value="New LKCircle Early Access Signup!">
-                    <input type="hidden" name="_next" value="https://yourdomain.com?success=true">
+                    <input type="hidden" name="_next" value="https://lkcircle.com?success=true">
                     <button type="submit" class="btn btn-primary">
                         Get Early Access
                     </button>
