--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
         <div class="nav-container">
             <a href="#" class="logo">
                 <div class="logo-icon">
-                    <img src="logo.png" alt="LKCircle Logo" style="width: 100%; height: 100%; object-fit: contain;">
+                    <img src="lkcircle-logo.png" alt="LKCircle Logo" style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <span>LKCircle</span>
             </a>
